# SandBox_Python

./: .gitignore  Animal.py  README.md  key  main.py  script.py  utils.py
animal_generator/: animal.py  animal_generator.py  data_structure.py  main.py  pyproject.toml  test_main.py
personal_stock/: db.sqlite3  manage.py
personal_stock/items/: admin.py  models.py  urls.py  views.py
personal_stock/items/migrations/: 0001_initial.py
personal_stock/items/templates/: 404.html  all_items.html  details.html  footer.html  home.html  main.html  template.html
personal_stock/personal_stock/: asgi.py  settings.py  urls.py  wsgi.py
python_core/: py_comprehensions.py  py_data_structures.py
spend_reporter/: main.py
