[tool.poetry]
name = "animal_generator"
version = "0.1.0"
description = ""
authors = ["Felipe Sousa"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
